# cuda-playpen

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  kernels.cu  kernels.cuh  main.cpp  main.hpp
